# diema-challenge-benchmark

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: diema12_stgcn.yaml  emo_to_idx_12.txt
emo_mocap/: __init__.py
emo_mocap/cli/: __init__.py  evaluate.py  generate_splits.py  predict.py  preprocess.py  train.py
emo_mocap/data/: feeder.py  loader.py  splits.py
emo_mocap/models/: __init__.py  base.py  registry.py  weights_init.py
emo_mocap/models/stgcn/: ST_units.py  adj_matrix.py  spatial_units.py  stgcn_model.py  tempo_units.py
emo_mocap/tools/: config.py
emo_mocap/training/: lightning_model.py
logs/: lopo_10fold_results.csv
